# claudia-statusline

./: .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  Makefile  NOTICE  README.md  SECURITY.md  SQLITE_MIGRATION.md  WINDOWS_BUILD.md  build.rs  claude-settings-example.json  deny.toml
.github/workflows/: build.yml  release-v2.yml  security.yml  test-binaries-fixed.yml  test.yml  (+1 more)
docs/: ADAPTIVE_LEARNING.md  CLOUD_SYNC.md  CONFIGURATION.md  DATABASE_MIGRATIONS.md  INSTALLATION.md  USAGE.md
examples/: check_turso_version.rs  embedding_example.rs  inspect_turso_data.rs  migrate_turso.rs  setup_schema.rs
scripts/: bump-version.sh  install-statusline.sh  maintenance.sh  quick-install.sh  release.sh  setup-turso-schema.sql  setup-turso.sh  test-installation.sh  toggle-debug.sh  uninstall-statusline.sh
src/: common.rs  config.rs  context_learning.rs  database.rs  display.rs  error.rs  git.rs  git_utils.rs  hook_handler.rs  layout.rs  lib.rs  main.rs  models.rs  retry.rs  state.rs  stats.rs  sync.rs  theme.rs  utils.rs  version.rs
tests/: baseline_config_test.rs  burn_rate_active_time_accumulation_test.rs  burn_rate_active_time_long_gaps_test.rs  burn_rate_active_time_threshold_test.rs  burn_rate_auto_reset_basic_test.rs  burn_rate_auto_reset_cumulative_cost_test.rs  burn_rate_auto_reset_daily_stats_test.rs  burn_rate_auto_reset_threshold_test.rs  burn_rate_auto_reset_weekend_test.rs  burn_rate_high_volume_transactions_test.rs  burn_rate_multi_day_wall_clock_test.rs  burn_rate_very_long_sessions_test.rs  context_learning_sanitization_tests.rs  context_tokens_display_tests.rs  db_maintenance_tests.rs  display_config_integration.rs  hook_integration_tests.rs  integration_tests.rs  lib_api_tests.rs  proptest_tests.proptest-regressions  proptest_tests.rs  regression_tests.rs  sqlite_integration_tests.rs  test_isolation_regression.rs  test_support.rs  theme_integration.rs  token_rate_basic_test.rs
themes/: catppuccin.toml  dark.toml  dracula.toml  gruvbox.toml  high-contrast.toml  light.toml  monokai.toml  nord.toml  one-dark.toml  solarized.toml  tokyo-night.toml
(+1 files in other folders)
